--- a/site-rhizom/frontend/index.html
+++ b/site-rhizom/frontend/index.html
@@ -7,8 +7,10 @@
     <title>Studio Rhizom</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="preload" as="image" href="/static/home/ImageHome/Grandeimage.png" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="app"></div>
