--- a/site-rhizom/frontend/index.html
+++ b/site-rhizom/frontend/index.html
@@ -4,6 +4,8 @@
     <!-- <script src="https://cdn.tailwindcss.com"></script> -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <title>Studio Rhizom</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -11,6 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://use.typekit.net/uul1ddw.css">
   </head>
   <body>
     <div id="app"></div>
